--- a/css/custom.css
+++ b/css/custom.css
@@ -4079,7 +4079,7 @@ textarea.input-group-sm>.input-group-btn>.btn {
     right: 0;
     width: 9rem;
     bottom: 0;
-    border-left: 1px solid hsla(0, 0%, 100%, .7);
+    border-left: 2px solid hsla(0, 0%, 100%, .7);
     -webkit-transition: all .5s ease-in-out;
     -o-transition: .5s all ease-in-out;
     transition: all .5s ease-in-out;
@@ -6000,7 +6000,7 @@ header.Custom+.container .modal-content {
 }
 
 .header-branding .tagline {
-    font-size: 18px;
+    /* font-size: 18px;
     font-weight: 200;
     color: #fff;
     -webkit-box-flex: 1;
@@ -6008,7 +6008,9 @@ header.Custom+.container .modal-content {
     -ms-flex: 1 auto;
     flex: 1 auto;
     text-align: right;
-    padding: .25rem 0;
+    padding: .25rem 0; */
+    float: right;
+    padding: 10px;
 }
 
 @media screen and (max-width:900px) {
@@ -6045,11 +6047,20 @@ header.Custom+.container .modal-content {
     font-size: 14px;
 }
 
+.header-branding .dropdown-lang a {
+    min-width: 120px;
+}
+
+.header-branding .dropdown-gas a {
+    min-width: 180px;
+}
+
 .header-branding .dropdown .dropdown-menu {
-    right: -2px;
-    min-width: auto;
+    /* right: -2px; */
+    min-width: 100%;
     left: auto;
     font-size: 14px;
+    /* padding: 5px; */
 }
 
 .dropdown-menu {
@@ -6064,7 +6075,7 @@ header.Custom+.container .modal-content {
 
 .header-branding .dropdown-toggle {
     font-size: 14px;
-    padding: .4rem 1rem;
+    /* padding: .4rem 1rem; */
 }
 
 .header-branding .dropdown-gas {
@@ -6073,10 +6084,10 @@ header.Custom+.container .modal-content {
 
 .header-branding .dropdown-gas .dropdown-menu {
     min-width: 100%;
-    padding: .5rem;
-    margin: 0;
+    padding: 5px;
+    /* margin: 0;
     left: 0;
-    right: 0;
+    right: 0; */
 }
 
 .header-branding .dropdown-gas .dropdown-menu p {
@@ -6849,7 +6860,6 @@ header.Custom+.container .modal-content {
     overflow-y: auto;
     height: 100%;
     padding: 0px;
-    padding-bottom: 150px;
 }
 
 .pwd-input {
@@ -7003,13 +7013,13 @@ header.Custom+.container .modal-content {
 input[type=range] {
     -webkit-appearance: none;
     border: 1px solid white;
-    width: 300px;
+    width: 100%;
 }
 
 input[type=range]::-webkit-slider-runnable-track {
-    width: 300px;
+    width: 100%;
     height: 5px;
-    background: #ddd;
+    background: #ef985e;
     border: none;
     border-radius: 3px;
 }
@@ -7029,13 +7039,14 @@ input[type=range]:focus {
 }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #ccc;
+    background: #ef985e;
 }
 
 input[type=range]::-moz-range-track {
-    width: 300px;
+    width: 100%;
     height: 5px;
-    background: #ddd;
+    /* background: #ddd; */
+    background: #ef985e;
     border: none;
     border-radius: 3px;
 }
@@ -7054,7 +7065,7 @@ input[type=range]:-moz-focusring {
 }
 
 input[type=range]::-ms-track {
-    width: 300px;
+    width: 100%;
     height: 5px;
     background: transparent;
     border-color: transparent;
@@ -7086,4 +7097,8 @@ input[type=range]:focus::-ms-fill-lower {
 
 input[type=range]:focus::-ms-fill-upper {
     background: #ccc;
+}
+
+.tab-content {
+    padding-bottom: 150px;
 }
