--- a/css/custom.css
+++ b/css/custom.css
@@ -3511,12 +3511,13 @@ fieldset[disabled] .btn-file:hover {
 }
 
 .dropdown-menu {
-    /* position: relative !Important; */
-    top: 100%;
+    position: absolute !important;
+    top: 100% !important;
+    display: block !important;
     left: 0;
     z-index: 9999 !important;
     float: left;
-    min-width: auto;
+    min-width: 100%;
     padding: 0;
     margin: 2px 0 0;
     list-style: none;
@@ -3527,6 +3528,12 @@ fieldset[disabled] .btn-file:hover {
     -webkit-box-shadow: 0 6px 10px rgba(0, 0, 0, .175);
     box-shadow: 0 6px 10px rgba(0, 0, 0, .175);
     background-clip: padding-box;
+}
+
+.selectFunction {
+    width: 220px;
+    border-top-right-radius: 4px !important;
+    border-bottom-right-radius: 4px !important;
 }
 
 .dropdown-menu .divider {
@@ -4068,16 +4075,16 @@ textarea.input-group-sm>.input-group-btn>.btn {
 }
 
 .alert.popup .icon-close {
-    background-image: url("data:image/svg+xml;charset=utf-8, %3Csvg xmlns='http: //www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 348.333 348.334'%3E%3Cpath d='M336.559 68.611L231.016 174.165l105.543 105.549c15.699 15.705 15.699 41.145 0 56.85-7.844 7.844-18.128 11.769-28.407 11.769-10.296 0-20.581-3.919-28.419-11.769L174.167 231.003 68.609 336.563c-7.843 7.844-18.128 11.769-28.416 11.769-10.285 0-20.563-3.919-28.413-11.769-15.699-15.698-15.699-41.139 0-56.85l105.54-105.549L11.774 68.611c-15.699-15.699-15.699-41.145 0-56.844 15.696-15.687 41.127-15.687 56.829 0l105.563 105.554L279.721 11.767c15.705-15.687 41.139-15.687 56.832 0 15.705 15.699 15.705 41.145.006 56.844z' fill='%23FFF'/%3E%3C/svg%3E");
+    background-image: url("../images/icon-x-orange.svg");
     background-position: 50%;
     background-repeat: no-repeat;
-    background-size: 1rem;
+    background-size: 20px;
     cursor: pointer;
     opacity: .7;
     position: absolute;
     top: 0;
     right: 0;
-    width: 9rem;
+    width: 50px;
     bottom: 0;
     border-left: 2px solid hsla(0, 0%, 100%, .7);
     -webkit-transition: all .5s ease-in-out;
@@ -6064,7 +6071,7 @@ header.Custom+.container .modal-content {
 }
 
 .dropdown-menu {
-    top: auto !important;
+    /* top: auto !important; */
 }
 
 .header-branding .dropdown .dropdown-menu>li>a {
